--- a/values.yaml
+++ b/values.yaml
@@ -65,7 +65,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: example.com
       paths:
         - path: /
           pathType: ImplementationSpecific
@@ -89,7 +89,7 @@ httpRoute:
     # namespace: default
   # Hostnames matching HTTP header.
   hostnames:
-  - chart-example.local
+  - example.com
   # List of rules and filters applied.
   rules:
   - matches:
