host added back to ingress

--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.ingress.enabled }}
+{{- if .Values.ingress.enabled -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -10,10 +10,9 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  {{- if .Values.ingress.className }}
-  ingressClassName: {{ .Values.ingress.className }}
+  {{- with .Values.ingress.className }}
+  ingressClassName: {{ . }}
   {{- end }}
-
   {{- if .Values.ingress.tls }}
   tls:
     {{- range .Values.ingress.tls }}
@@ -24,22 +23,21 @@ spec:
       secretName: {{ .secretName }}
     {{- end }}
   {{- end }}
-
   rules:
-  {{- range .Values.ingress.hosts }}
-  - {{- if .host }}
-    host: {{ .host | quote }}
+    {{- range .Values.ingress.hosts }}
+    - host: {{ .host | quote }}
+      http:
+        paths:
+          {{- range .paths }}
+          - path: {{ .path }}
+            {{- with .pathType }}
+            pathType: {{ . }}
+            {{- end }}
+            backend:
+              service:
+                name: {{ include "payer_extractor.fullname" $ }}
+                port:
+                  number: {{ $.Values.service.port }}
+          {{- end }}
     {{- end }}
-    http:
-      paths:
-      {{- range .paths }}
-      - path: {{ .path }}
-        pathType: {{ default "Prefix" .pathType }}
-        backend:
-          service:
-            name: {{ include "payer_extractor.fullname" $ }}
-            port:
-              number: {{ $.Values.service.port }}
-      {{- end }}
-  {{- end }}
 {{- end }}
