--- a/values.yaml
+++ b/values.yaml
@@ -65,6 +65,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
+    - host: /
       paths:
         - path: /
           pathType: ImplementationSpecific
@@ -88,6 +89,7 @@ httpRoute:
     # namespace: default
   # Hostnames matching HTTP header.
   hostnames:
+  - /
   # List of rules and filters applied.
   rules:
   - matches:
