--- a/values.yaml
+++ b/values.yaml
@@ -65,7 +65,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: /
+    - host: 20.72.220.113
       paths:
         - path: /
           pathType: ImplementationSpecific
@@ -89,7 +89,7 @@ httpRoute:
     # namespace: default
   # Hostnames matching HTTP header.
   hostnames:
-  - /
+  - 20.72.220.113
   # List of rules and filters applied.
   rules:
   - matches:
